Edited the Home Featured Content part of the home page to constrain larger images to the proper size, fixed the alignment issue of the pictures as well as the alignment issue of the titles

--- a/Mockup_Themes/COS-JGF/style.css
+++ b/Mockup_Themes/COS-JGF/style.css
@@ -146,29 +146,37 @@ ul, ol { margin: 0 0 10px 0; }
 	min-height:115px;
 }
 .fc_homepage{
-	width:283px;
-	height:95px;
-	margin-left:22px;
+	max-width:283px;
+	max-height:95px;
+	margin-left:27px;
 	margin-bottom:30px;
 	position:relative;
 	zoom:1;
 	float: left;
-
+}
+.fc_homepage img {
+	max-width:283px;
+	max-height:95px;
+}	
 }
 .fc_title{
 	background: #ffffff;
 	color: #000;
 	font-size:20px;
+	width:283px;
 	height:30px;
 	overflow: hidden;
-	padding:5px;
 	position: absolute;
 	bottom:0px;
-	margin-left:10px;
 	left:0px;
 	opacity: 0.75;
 	filter: alpha(opacity = 75);
 	width: 100%;
+}
+.fc_title p {
+	width:100%;
+	height:100%;
+	text-align:center;
 }
 /******End Featured Content on Home Page*****/
 
